# ddd-study-using-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
book_management/: .coveragerc  .dockerignore  .envrc  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  local.yml  mypy.ini  production.yml  pyproject.toml  pytest.ini
book_management/compose/local/book_management/: Dockerfile  entrypoint  start
book_management/compose/production/book_management/: Dockerfile  start
book_management/src/: app.py  gunicorn.conf.py
book_management/src/.secrets/: postgres.txt
book_management/src/common/errors/: exceptions.py
book_management/src/common/infrastructures/postgres/: repository.py  sqlalchemy.py
book_management/src/common/protocols/: model_mapper.py  uow_base.py
book_management/src/core/: api_config.py  container.py
book_management/src/core/fastapi/: errors.py  health_check.py  responses.py  routes.py
book_management/src/core/fastapi/login/: auth_service.py
book_management/src/core/pydantic/: immutables.py
book_management/src/modules/book/: entities.py  isbn.py
book_management/src/modules/books/domain/: value_objects.py
book_management/src/modules/books/domain/aggregate/: model.py
book_management/src/modules/books/infrastructure/postgres/models/: book_orm.py  mapper.py
book_management/src/modules/books/infrastructure/postgres/query/: repository.py
book_management/tests/: conftest.py
book_management/tests/modules/: conftest.py
book_management/tests/modules/book/: test_book_aggregate.py  test_isbn.py
book_management/tests/modules/book/domain/: test_book_aggregate.py  test_isbn.py
book_management/tests/modules/book/factories/: book_factories.py
book_management/tests/modules/book/infrastructure/postgres/query/: test_book_orm.py
book_management/tests/utils/: asserts.py
